Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-397

lustre 2.0 client can not mount to lustre 2.1 server

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.1.0
    • Lustre 2.0.0
    • None
    • 3
    • 4987

      The commit 06a67987e06f7fa9c0bfde549d54e2bed0a78ade introduced server identifier into lu_seq_range to distinguish between MDT and OST fids. But for old 2.0 client, it did not specify such identifier/flags, then caused 'fld_server_lookup()' failure.

            yong.fan nasf (Inactive)
            yong.fan nasf (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: