LU-397 Ignore 'lsr_flags' for old 2.0 client

Lustre 2.x introduces server identifier into lu_seq_range to distinguish
MDT and OST fids. But for old 2.0 client, it does not specify such
identifier/flags. So ignore such 'lsr_flags' for old 2.0 client to allow
old 2.0 client can talk with new 2.x server.

Change-Id: I652caa637959268e1da499370a0efd356ff98bbe
Signed-off-by: nasf <yong.fan@whamcloud.com>